--- a/index.html
+++ b/index.html
@@ -1,116 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style type="text/css">
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.5);
-  transition: opacity 200ms;
-  visibility: hidden;
-  opacity: 0;
-}
-.overlay.light {
-  background: rgba(255, 255, 255, 0.5);
-}
-.overlay .cancel {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  cursor: default;
-}
-.overlay:target {
-  visibility: visible;
-  opacity: 1;
-}
-
-.popup {
-  margin: 75px auto;
-  padding: 20px;
-  background: #fff;
-  border: 1px solid #666;
-  width: 300px;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
-  position: relative;
-}
-.light .popup {
-  border-color: #aaa;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
-}
-.popup h2 {
-  margin-top: 0;
-  color: #666;
-  font-family: "Trebuchet MS", Tahoma, Arial, sans-serif;
-}
-.popup .close {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  top: 20px;
-  right: 20px;
-  opacity: 0.8;
-  transition: all 200ms;
-  font-size: 24px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #666;
-}
-.popup .close:hover {
-  opacity: 1;
-}
-.popup .content {
-  max-height: 400px;
-  overflow: auto;
-}
-.popup p {
-  margin: 0 0 1em;
-}
-.popup p:last-child {
-  margin: 0;
-}
-
-.button {
-    background-color:#3883fa;
-    border-radius: 5px;
-    border-color: #4b4b4b;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 17px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-.node {
-  cursor: pointer;
-}
-
-.node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-.node text {
-  font: 10px sans-serif;
-}
-
-.link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
-}
-
-#jsoneditor {
-  height: 300px;
-}
-
-</style>
+<link type="text/css" rel="stylesheet" href="editor.css" />
 <body>
 <script src="./js/jquery-1.10.2.min.js"></script>
 <script src="./js/d3.v3.min.js"></script>
@@ -123,14 +13,6 @@
   <input type="number" id="tree_height" value=400 style="width:40px" />
 </label>
 <div id="jsoneditor" style={width:400px}></div>
+<div id="modal"><div id="content"></div><button id="modalClose" onclick="nodeFocus=false;nodeOut();d3.select('#modal').style('display','none');">Avanti</button></div>
 <script src="script.js"></script>
 </script>
-<div id="popup1" class="overlay">
-	<div class="popup">
-		<h2>Info box</h2>
-		<a class="close" href="#">&times;</a>
-		<div class="content">
-			<p>This is done totally without JavaScript. Just HTML and CSS.</p>
-		</div>
-	</div>
-</div>
