bozza dimostratore titto-way

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 </label>
 <div id="jsoneditor" style={width:400px}></div>
 <div id="modal"><div id="content"></div><button id="modalClose" onclick="nodeFocus=false;nodeOut();d3.select('#modal').style('display','none');">Avanti</button></div>
+<script src="./node_modules/tree-model/dist/TreeModel-min.js"></script>
+<button name="Next" onClick="nextSlide()" class="button">Next</button>
 <script src="script.js"></script>
 </script>
