--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link type="text/css" rel="stylesheet" href="editor.css" />
 <body>
 <script src="./js/d3.v3.min.js"></script>
+<script src="./js/jquery-1.10.2.min.js"></script>
 <head>
     <link href="./node_modules/jsoneditor/dist/jsoneditor.min.css" rel="stylesheet" type="text/css">
     <script src="./node_modules/jsoneditor/dist/jsoneditor.min.js"></script>
